--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "deploy" : "rsync -avz --delete dist/ mah@mah.priv.at:/var/www/static.mah.priv.at/apps/flight/"
+    "deploy": "rsync -avz --delete dist/ mah@mah.priv.at:/var/www/static.mah.priv.at/apps/flight/"
   },
   "dependencies": {
     "cesium": "^1.112.0",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
     "vite": "^5.0.2",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-externals": "^0.6.2",
     "vite-plugin-static-copy": "^0.17.1"
   }
